Stop using -govuk-spacing(n) in SASS
Using `-govuk-spacing(n)` in the SASS files was not working, so this
replaces it with `-1 * govuk-spacing(n)` instead.

--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -91,7 +91,7 @@ details summary {
 
 .spreadsheet {
 
-  margin-bottom: -govuk-spacing(6);
+  margin-bottom: -1 * govuk-spacing(6);
 
   .table {
     margin-bottom: 0;
