--- a/app/assets/stylesheets/components/conditional-radios.scss
+++ b/app/assets/stylesheets/components/conditional-radios.scss
@@ -17,7 +17,7 @@ $top-spacing: govuk-spacing(5);
 
   &-panel {
     border-left: $border-thickness solid $border-colour;
-    margin: 0 0 (-govuk-spacing(3)) (govuk-spacing(3) + ($border-thickness / 2));
+    margin: 0 0 (-1 * govuk-spacing(3)) (govuk-spacing(3) + ($border-thickness / 2));
     padding: govuk-spacing(3) 0 0 (govuk-spacing(6) - ($border-thickness / 2));
     position: relative;
     top: -$top-spacing;
