--- a/app/assets/stylesheets/components/tick-cross.scss
+++ b/app/assets/stylesheets/components/tick-cross.scss
@@ -51,10 +51,10 @@
 
           position: absolute;
 
-          top: -govuk-spacing(3) - 1;
+          top: -1 * govuk-spacing(3) - 1;
           right: 0;
-          bottom: -govuk-spacing(3);
-          left: -govuk-spacing(3);
+          bottom: -1 * govuk-spacing(3);
+          left: -1 * govuk-spacing(3);
 
           background: transparent;
         }
