--- a/app/assets/stylesheets/views/notification.scss
+++ b/app/assets/stylesheets/views/notification.scss
@@ -2,7 +2,7 @@
 
   @include core-16;
   color: $secondary-text-colour;
-  margin-top: -govuk-spacing(3);
+  margin-top: -1 * govuk-spacing(3);
 
   &.error {
 
